; ModuleID = '/home/carl/AnghaBench/tmux/extr_cmd-queue.c_cmdq_error_callback.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_cmd-queue.c_cmdq_error_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmdq_item = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@CMD_RETURN_NORMAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cmdq_item*, i8*)* @cmdq_error_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmdq_error_callback(%struct.cmdq_item* %0, i8* %1) #0 {
  %3 = alloca %struct.cmdq_item*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store %struct.cmdq_item* %0, %struct.cmdq_item** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  store i8* %6, i8** %5, align 8
  %7 = load %struct.cmdq_item*, %struct.cmdq_item** %3, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @cmdq_error(%struct.cmdq_item* %7, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %8)
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @free(i8* %10)
  %12 = load i32, i32* @CMD_RETURN_NORMAL, align 4
  ret i32 %12
}

declare dso_local i32 @cmdq_error(%struct.cmdq_item*, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
